--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta property="og:site_name" content="Schervi.wtf">
 <meta property="og:url" content="Schervi.wtf">
 <meta property="og:title" content="Homepage">
-<meta property="og:description" content="Some Shitty Roblox Scripter.">
+<meta property="og:description" content="Someone, I don't know.">
 <meta property="og:type" content="website">
 <meta name="theme-color" content="#eb1c3a">
 <meta name="og:image" itemprop="image" content="assets/images/image.png">
@@ -397,7 +397,7 @@ Schervi#0001
 <i class="fas fa-code"></i>
 </div>
 <div class="content">
- <h3 class="title">Anomic Z</h3>
+ <h3 class="title">Shop</h3>
 <p>https://discord.gg/mpYekpQ2CW</p>
 </div>
 </div>
@@ -413,8 +413,8 @@ Schervi#0001
 <div class="icon">
 <i class="fas fa-user-shield"></i> </div>
 <div class="content">
-<h3 class="title">Floppa Hub</h3>
-<p>Op ScriptHub discord.gg/dvkGhrnakx</p>
+<h3 class="title">My Discord</h3>
+<p>ScriptHub discord.gg/dvkGhrnakx</p>
 </div>
 </div>
 </a>
