--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta property="og:site_name" content="Schervi.wtf">
 <meta property="og:url" content="Schervi.wtf">
 <meta property="og:title" content="Homepage">
-<meta property="og:description" content="Someone, I don't know.">
+<meta property="og:description" content="LUA Developer.">
 <meta property="og:type" content="website">
 <meta name="theme-color" content="#eb1c3a">
 <meta name="og:image" itemprop="image" content="assets/images/image.png">
@@ -310,7 +310,7 @@
 <div class="col-lg-4 col-md-6 col-sm-6 col-12">
 <div class="single-service service__style--3 text-white">
 <div class="content">
-<h3 class="title">Some Shitty Roblox Scripter.</h3>
+<h3 class="title">LUA Developer.</h3>
 </div>
 </div>
 <ul class="nav nav-tabs tab-style--1" id="myTab" role="tablist">
