--- a/index.html
+++ b/index.html
@@ -360,6 +360,7 @@ Discord:
 <div class="section-title">
 <h2 class="title" style="font-size: xx-large;">What can Schervi do?</h2>
 <p class="description">Nothing lol but here's my discord</p>
+<iframe src="https://discord.com/widget?id=860894034515066890&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
 </div>
 <div class="row mt--30 mt_sm--10">
 <div class="col-lg-6 col-md-12 col-sm-12 col-12" style="padding-bottom: 20px;">
