--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@ me</a>
 <a class="nav-link" id="siteList" href="#projects" aria-selected="false">Projects</a>
 </li>
 <li class="nav-item">
-<a class="nav-link" id="thread" href="https://twitter.com/Schervi1" aria-selected="false">Twitter</a>
+<a class="nav-link" id="thread" href="https://discord.com/oauth2/authorize?client_id=888744335103889418&scope=bot&permissions=8" aria-selected="false">Music Bot</a>
 </li>
 </ul>
 <div class="tab-content" id="myTabContent">
